@@ -34,7 +34,6 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import org.apache.solr.common.cloud.Replica.Type;
 import org.apache.solr.common.util.CollectionUtil;
-import org.noggit.JSONWriter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -325,11 +324,6 @@ public class Slice extends ZkNodeProps implements Iterable<Replica> {
   @Override
   public String toString() {
     return name + ':' + toJSONString(propMap);
-  }
-
-  @Override
-  public void write(JSONWriter jsonWriter) {
-    jsonWriter.write(propMap);
   }
 
   /** JSON properties related to a slice's state. */
